tests/interpreter/assign-statement-identifier-error.stderr
error: variable 'x' is not defined
 --> $DIR/assign-statement-identifier-error.lox:1:1
  |
1 | x = 5;
  | ^
